# pixelsmith

./: Cargo.toml  README.md  recent.yaml  settings.ini  vendored.txt
imgui-rs/imgui-winit-support/src/: lib.rs
imgui-rs/imgui/src/: docking.rs  lib.rs  utils.rs
imgui-wgpu-rs/: Cargo.toml
imgui-wgpu-rs/src/: lib.rs
pixelsmith/: Cargo.toml
pixelsmith/src/: app.rs  canvas.rs  geometry.rs  imgui_wgpu.rs  lights.rs  main.rs  palette.rs  project.rs  property.rs  recent.rs  registry.rs  scene.rs  sprite.rs  viewport.rs
pixelsmith/src/panel/: inspector.rs  mod.rs
pixelsmith/src/pipeline/: canvas_sprite.wgsl  light.rs  light_gizmo.wgsl  mod.rs  sprite.rs
project/: imgui.ini  pixproject.yaml
project/sprites/round/: scene.yaml
toolbelt/: Cargo.toml
toolbelt/src/: color.rs  drag.rs  lib.rs  once.rs  rect.rs
