[package]
name = "pixelsmith"
version = "0.1.0"
edition = "2021"

[dependencies]
imgui = { path = "../imgui-rs/imgui", features = [ "docking", "tables-api" ] }
imgui-sys = { path = "../imgui-rs/imgui-sys", features = [ "docking" ] }
wgpu = "0.12"
imgui-winit-support = { path = "../imgui-rs/imgui-winit-support" }
pollster = "0.2"
winit = "0.26"
bytemuck = { version = "1.4", features = ["derive"] }
image = { version = "0.24", default-features = false, features = ["png"] }
toolbelt = { path = "../toolbelt" }
num = "0.4"
yaml-rust = "0.4.5"
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.8"
parking_lot = "0.12"
binder = "0.0.2"
