[package]
name = "toolbelt"
description = "a collection of simple rust utilities"
version = "0.0.2"
authors = ["trashbyte <github@trashbyte.io>"]
edition = "2018"
repository = "https://github.com/trashbyte/toolbelt"
license = "MIT"
categories = ["development-tools", "game-development"]
keywords = ["tools", "utilities", "utils"]

[dependencies]
cgmath = { version = "0.18", features = [ "swizzle", "serde" ] }
serde = "1.0"
serde_derive = "1.0"
noise = "0.6"
walkdir = "2.3"
num = "0.4"
rustversion = "1.0"
